--- a/virtual/src/weights/VirtualList2/idx.html
+++ b/virtual/src/weights/VirtualList2/idx.html
@@ -27,6 +27,37 @@
         {bottom: 700}
     ]
 
+    /**
+     *
+     * @param nums
+     * @param target
+     * @return {number}
+     */
+    function fn2(nums,target){
+        const len = nums.length
+        let left = 0,right = len-1,n = len
+
+        let l = 0
+        while (left <= right){
+
+            // console.log(`${target} has run ${l = l+1}`)
+
+            const middleIndex = Math.floor((left+right)/2)
+            const middleVal = nums[middleIndex].bottom
+            if(middleVal === target){
+                return middleIndex
+            }else if(middleVal>target){
+                right = middleIndex -1
+            }else if(middleVal<target){
+                left = middleIndex + 1
+            }
+        }
+        return -1
+    }
+    console.log(fn2(arr, 200))
+    console.log(fn2(arr, 300))
+    console.log(fn2(arr, 400))
+
     function fn(nums, target) {
         const n = nums.length
         let left = 0, right = n - 1, ans = n
@@ -65,7 +96,7 @@
         return ans;
     }
 
-    console.log(fn(arr, 10));
+    //console.log(fn(arr, 10));
 
 </script>
 </body>
