--- a/virtualList2.html
+++ b/virtualList2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>victual-list</title>
+    <title>victual-list2</title>
     <style>
         * {
             margin: 0;
@@ -11,13 +11,16 @@
 
         .container {
             position: relative;
-            width: 500px;
-            height: 500px;
+            /*width: 100%;*/
             margin: auto;
             overflow-x: hidden;
             overflow-y: scroll;
             box-sizing: border-box;
-            border: 1px solid red;
+            width: 300px;
+            height: 500px;
+            box-sizing: border-box;
+            border: 1px solid #e8e8e8;
+            margin: auto;
         }
 
 
@@ -30,7 +33,8 @@
 
         .container-item {
             box-sizing: border-box;
-            border: 1px solid pink;
+            border-bottom: 1px solid #e8e8e8;
+            min-height: 100px
         }
     </style>
 </head>
@@ -43,10 +47,12 @@
         <div class="container-placeholder" :style="{height:listHeight+'px'}"></div>
         <div ref="listRef" class="container-list" :style="{transform:'translate3d(0,'+top+'px,0)'}">
             <div
+                ref="items"
                 v-for="item in visibleData"
                 :key="item.index"
+                :id="item.index"
                 class="container-item"
-                :style="{height:itemHeight+'px',lineHeight:itemHeight+'px'}">
+            >
                 {{item.title}}
             </div>
         </div>
@@ -58,10 +64,12 @@
 
 <script>
     const list = (function getData() {
+        const a = '斯文·本德尔在2009年夏天从慕尼黑1860转会至多特蒙德，在至今的八个赛季里'
+        const b = '，他代表大黄蜂在各项赛事中共出场224次，攻入4球。其间率队获得过两次德甲冠军、两次德国杯冠军，以及两次德国超级杯冠军斯文·本德尔在2009年夏天从慕尼黑1860转会至多特蒙德，在至今的八个赛季里，他代表大黄蜂在各项赛事中共出场224次，攻入4球。其间率队获得过两次德甲冠军、两次德国杯冠军，以及两次德国超级杯冠军'
         const data = []
         for (let i = 0; i < 1000; i++) {
             data.push({
-                title: `now is ${i + 1}`,
+                title: i % 2 === 0 ? b : a,
                 index: i
             })
         }
@@ -69,50 +77,116 @@
     })()
     new Vue({
         el: '#app',
-        data: {
-            screenHeight: 0,
-            itemHeight: 100,
-            start: 0,
-            end: 0,
-            top:0,
-            tick:false
+        data() {
+            return {
+                estimateHeight: 100,
+                screenHeight: 0,
+                start: 0,
+                end: 10,
+                top: 0,
+                tick: false,
+                positions: [],
+                bufferScale: 1,
+                buffer: 5
+            }
         },
         computed: {
-            listHeight() {
-                return list.length * this.itemHeight
-            },
             visibleData() {
-                let { start, end } = this
-                let start2 = start - 2
-                let end2 = end + 2
-                let len = list.length
-
-                start = start2 < 0 ? 0 : start2
-                end = end2 >= len ? len : end2
-                return list.slice(start, end)
+                let { start, end, buffer } = this
+                start = Math.max(start - buffer, 0)
+                end = end + buffer
+                const res = list.slice(start, end)
+                return res
+            },
+            // 列表总高度
+            listHeight() {
+                return this.positions[list.length - 1].bottom
             },
             visibleCount() {
-                const { itemHeight, screenHeight } = this
-                return Math.ceil(screenHeight / itemHeight)
-            }
+                return Math.ceil(this.screenHeight / this.estimateHeight);
+            },
+        },
+        created() {
+            this.initPositions()
         },
         mounted() {
             this.screenHeight = this.$el.clientHeight;
             this.end = this.start + this.visibleCount
         },
+        updated() {
+            const nodes = this.$refs.items
+            nodes.forEach(node => {
+                const rect = node.getBoundingClientRect()
+                const height = rect.height
+                const index = +node.id
+                const oldHeight = this.positions[index].height
+                const diffHeight = oldHeight - height
+                if (diffHeight) {
+                    const pos = this.positions[index]
+                    pos.height = height
+
+                    let bot = index === 0 ? 0 : this.positions[index - 1].bottom
+                    pos.bottom = height + bot
+                }
+            })
+        },
         methods: {
+            initPositions() {
+                this.positions = list.map((item, index) => {
+                    return {
+                        index,
+                        height: this.estimateHeight,
+                        bottom: (index + 1) * this.estimateHeight
+                    }
+                })
+            },
+            // 获取列表起始索引
+            getStartIndex(scrollTop = 0) {
+                //let index = this.positions.find(i => i && i.bottom >= scrollTop).index
+                let index = this.fn(this.positions, scrollTop)
+                return index
+            },
+            // 10 20 30  40  50 60 70 / 12
+            fn(nums, target) {
+                const n = nums.length
+                let left = 0, right = n - 1, index = n
+                while (left <= right) {
+                    const midIndex = parseInt((left + right) / 2)
+                    const midValue = nums[midIndex].bottom
+                    if (midValue === target) {
+                        return midIndex + 1
+                    } else if (midValue < target) {
+                        left = midIndex + 1
+                    } else if (midValue > target) {
+                        if (index > midIndex) {
+                            index = midIndex
+                        }
+                        right = right - 1
+                    }
+                }
+                return index
+            },
+            // 获取当前的偏移量
+            setStartOffset() {
+                let startOffset
+                if (this.start >= 1) {
+                    startOffset = this.positions[this.start - 1].bottom
+                } else {
+                    startOffset = 0;
+                }
+                this.top = startOffset
+            },
             handleScroll() {
-                if(!this.tick){
+                if (!this.tick) {
                     requestAnimationFrame(this.scrollFunc)
                     this.tick = true
                 }
             },
-            scrollFunc(){
-                let top = this.$refs.containerRef.scrollTop
-                const { itemHeight, visibleCount } = this
-                this.start = Math.floor(top / itemHeight)
-                this.end = this.start + visibleCount
-                this.top = top - top % itemHeight
+            scrollFunc() {
+                let scrollTop = this.$refs.containerRef.scrollTop
+                this.start = this.getStartIndex(scrollTop)
+                this.end = this.start + this.visibleCount
+                this.setStartOffset();
 
                 this.tick = false
             }
